# pyIDS

./: pyproject.toml  setup.py
pyids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyids/algorithms/: ids.py
pyids/data_structures/: ids_cacher.py
