[project]
name = "pyids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyarc>=1.1.4",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "setuptools>=80.10.1",
]

[build-system]
requires = ["setuptools>=80.10.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["pyids*"]
exclude = ["data*", "output_data*", "jupyter_notebooks*", "scripts*"]
